add django-templated-email to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ boto==2.6.0
 django-ses==0.4.1
 django-zebra==0.4.3
 django-extensions==1.0.0
+django-templated-email==0.4.7
 stripe==1.7.6
 wsgiref==0.1.2
 pusher==0.6
