--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,16 @@ development:
   host: localhost
   database: donationparty-dev
 
+staging:
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: d12qa3vuo28629
+  username: dbbgfphezcydip
+  password: 3gy-TF5Rogt1cRLqGU8ZvpYNOL
+  host: ec2-54-243-217-96.compute-1.amazonaws.com
+  port: 5432
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
